started adding viewmanga route, got manga route properly working and returning feeds
