# gen/http/feedgen/server/encode_decode.go
@@ -68,3 +68,31 @@ func DecodeMangaRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.D
 		return payload, nil
 	}
 }
+
+// EncodeViewMangaResponse returns an encoder for responses returned by the
+// feedgen viewManga endpoint.
+func EncodeViewMangaResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
+	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
+		res := v.(string)
+		enc := encoder(ctx, w)
+		body := res
+		w.WriteHeader(http.StatusOK)
+		return enc.Encode(body)
+	}
+}
+
+// DecodeViewMangaRequest returns a decoder for requests sent to the feedgen
+// viewManga endpoint.
+func DecodeViewMangaRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
+	return func(r *http.Request) (interface{}, error) {
+		var (
+			hash string
+
+			params = mux.Vars(r)
+		)
+		hash = params["hash"]
+		payload := NewViewMangaPayload(hash)
+
+		return payload, nil
+	}
+}
